# haxor

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE.txt  README.md  haxor.gemspec
examples/: build.sh  factorial.hax  guess-the-number.hax  hello-world.hax  if_else.hax  int.hax  memory-protection.hax  minimal.hax  stack-overflow.hax  steady-time-sleep.hax  steady.hax  test.hax  timer.hax
lib/: haxor.rb
lib/haxor/: consts.rb  header.rb  linker.rb  utils.rb
lib/haxor/compiler/: core.rb  section.rb  unit.rb
lib/haxor/compiler/component/: arithmetic.rb  base.rb  data.rb  jumps.rb  logical.rb  other.rb  transfer.rb  various.rb
lib/haxor/token/: base.rb  cmd.rb  data.rb  int64.rb  label.rb  pointer.rb
lib/haxor/vm/: core.rb  cpu.rb  mem.rb  os.rb  registers.rb  stack.rb  subsystem.rb
lib/haxor/vm/cpu/: core.rb
lib/haxor/vm/cpu/unit/: arithmetic.rb  base.rb  jumps.rb  logical.rb  transfer.rb  various.rb
main/: CMakeLists.txt
src/: CMakeLists.txt
src/haxor/common/: cmd.hh  haxor.hh  hdr.hh  opcode.cc
src/haxor/hc/: compiler.cc  compiler.hh  lexer.hh  lexer.l  main.cc  parser.y  pseudo.cc  pseudo.hh
src/haxor/hc/node/: all.hh  base.cc  base.hh  imm.cc  imm.hh  instr.cc  instr.hh  label.cc  label.hh  num.cc  num.hh  program.hh  reg.cc  reg.hh  section.cc  section.hh
src/haxor/hvm/: cpu.cc  cpu.hh  format.hh  main.cc  mem.cc  mem.hh  os.cc  os.hh  regs.cc  regs.hh  vm.cc  vm.hh
tests/: CMakeLists.txt  mem.cc  regs.cc
tests_bats/: add.hax  addi.hax  and.hax  andi.hax  b.hax  bal.hax  beq.hax  beql.hax  bgez.hax  bne.hax  bnel.hax  clear.hax  cmd.bats  div.hax  j.hax  jal.hax  jalr.hax  jr.hax  la.hax  li.hax  lui.hax  lw.hax  misc.bats  mod.hax  move.hax  mult.hax  nor.hax  or.hax  ori.hax  pop.hax  popm.hax  prol.hax  prol_epil_01.hax  push.hax  pushi.hax  pushm.hax  reference_to_non_existing_label.hax  resw.hax  ret.hax  sll.hax  (+16 more)
vm/: CMakeLists.txt
vm/src/: CMakeLists.txt
vm/src/haxor/: cpu.cc  cpu.hh  format.cc  format.hh  haxor.hh  hdr.hh  main.cc  mem.cc  mem.hh  opcode.cc  opcode.hh  os.cc  os.hh  regs.cc  regs.hh  vm.cc  vm.hh
vm/src/haxor/common/: cmd.hh  haxor.hh  opcode.hh
vm/src/haxor/hc/: compiler.cc  compiler.hh  lexer.cc  lexer.hh  lexer.l  main.cc  pseudo.hh
vm/src/haxor/hc/node/: all.hh  base.cc  instr.cc  instr.hh  label.cc  label.hh  num.hh  section.hh
vm/src/haxor/hvm/: cpu.cc  cpu.hh  format.cc  haxor.hh  hdr.hh  main.cc  mem.cc  mem.hh  opcode.cc  opcode.hh  os.cc  os.hh  regs.cc  regs.hh  vm.cc  vm.hh
